[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sounds/walk.mp3" type="AudioStream" id=2]
[ext_resource path="res://20989.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sounds/get.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.80125
height = 1.92241

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="player" type="KinematicBody" groups=["player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0133899, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.7494, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.39754, 0 )
current = true
fov = 57.0
far = 50.0

[node name="RayCast" type="RayCast" parent="Camera"]
enabled = true
cast_to = Vector3( 0, 0, -7 )

[node name="text1" type="Label3D" parent="Camera"]
transform = Transform( 0.254588, 0, 0, 0, 0.254588, 0, 0, 0, 1, 0, -0.27927, -0.683158 )
visible = false
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "что ты здесь делаешь?"
font = SubResource( 2 )

[node name="text2" type="Label3D" parent="Camera"]
transform = Transform( 0.254588, 0, 0, 0, 0.254588, 0, 0, 0, 1, 0, -0.27927, -0.683158 )
visible = false
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "называйте наш культ, пожалуйста,
ласково, нам это крайне важно"
font = SubResource( 2 )

[node name="text3" type="Label3D" parent="Camera"]
transform = Transform( 0.254588, 0, 0, 0, 0.254588, 0, 0, 0, 1, 0, -0.27927, -0.683158 )
visible = false
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "называйте наш культ по-модному,
 нам нужно хорошо звучать"
font = SubResource( 2 )

[node name="text4" type="Label3D" parent="Camera"]
transform = Transform( 0.254588, 0, 0, 0, 0.254588, 0, 0, 0, 1, 0, -0.27927, -0.683158 )
visible = false
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
text = "хороший"
font = SubResource( 2 )

[node name="OmniLight" type="OmniLight" parent="Camera"]
light_energy = 2.7
omni_range = 7.89579

[node name="walk_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0
autoplay = true
stream_paused = true

[node name="get_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 6.0

[node name="get_sound_timer" type="Timer" parent="get_sound"]

[connection signal="timeout" from="get_sound/get_sound_timer" to="." method="_on_get_sound_timer_timeout"]
